// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/hojin-kr/haru/cmd/proto";
// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

package haru;

// Service definition.
service version1 {
  // Create Account
  rpc CreateAccount (AccountRequest) returns (AccountReply) {}
  // GetProfile
  rpc GetProfile (ProfileRequest) returns (ProfileReply) {}
  // UpdateProfile
  rpc UpdateProfile (ProfileRequest) returns (ProfileReply) {}
  // GetPoint
  rpc GetPoint (PointRequest) returns (PointReply) {}
  // IncrPoint
  rpc IncrPoint (PointRequest) returns (PointReply) {}
  // GetPlaceId
  rpc GetPlace (PlaceRequest) returns (PlaceReply) {}
}

message AccountRequest {
  int64 ID = 1;
  int64 RegisterTimestamp = 2;
}

message AccountReply {
  int64 ID = 1;
  int64 RegisterTimestamp = 2;
}

message ProfileRequest {
  int64 ID = 1;
  string Nickname = 2;
}

message PlaceRequest {
  string Input = 1;
  string Language = 2;
}

message ProfileReply {
  int64 ID = 1;
  string Nickname = 2;
}

message PointRequest {
  int64 ID = 1;
  int64 Point = 2;
}

message PointReply {
  int64 ID = 1;
  int64 Point = 2;
  int64 Count = 3;
}

message PlaceReply {
  string Name = 1;
  string FormattedAddress = 2;
  string FormattedPhoneNumber = 3;
  string Icon = 4;
  string PlaceID= 5;
  string WeekdayText= 6;
  string Types= 7;
  string Website = 8;
  string URL = 9;
}